--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <title>My first HTML</title>
+    <!-- <link href="style1.css" rel="stylesheet"> -->
+   
+   
+        <style>
+            p {
+                color:green
+            }
+            p:hover {
+                color: lightblue
+            }
+        </style> 
+   
+
 </head>
 <body>
-   Dies ist meine Texte 
+    <!--Kommentar-->
+    <h1>Überschrift</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, distinctio.</p>
+    Dies ist meine Texte
+    <a href="https://www.google.com">Google</a>
+    <br/>
+    &gt;
+    &copy;BAL
+
+    <h>Input</h>
+    <Input type="text"
+    <p></p>
+    <h2>Strujturelemente</h2>
+    
+    <div align="center">
+        Mein Text1<p></p>
+        Mein Text 2
+    </div>
+
+    <h2>css</h2>
+    <p>Erstes CSS Tag</p>
+
+
+    <p style="color:red">Wie sieht diser Text aus</p>
+
+    <p>
+        Wie dieser Text nun azs
+        Und dieser?
+    </p>
+    
+    <h3>Box modell</h3>
+    <div>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere ut nam corrupti repudiandae. At recusandae dolor rem voluptatem reprehenderit. Quos omnis vero at natus esse magnam fugiat consequuntur, similique recusandae?
+        Atque, eveniet id. Consectetur id optio ipsum harum suscipit excepturi voluptatibus, quam, ex itaque autem voluptas voluptates repudiandae ad natus vitae enim praesentium ullam! Illo dolores recusandae accusantium ducimus unde!
+        Enim error doloremque molestias neque accusamus quasi necessitatibus maiores excepturi placeat repudiandae perferendis, odit, suscipit aperiam natus est tempora iste, distinctio quod officiis quam expedita! Nemo repellendus enim voluptatem aut.
+    </div>
+
 </body>
 </html>
